--- a/ecosystem.config.json
+++ b/ecosystem.config.json
@@ -1,14 +1,15 @@
 {
   "apps": [
     {
-      "name": "app",
+      "name": "yagi-server",
       "script": "src/index.js",
       "instances": 1,
       "autorestart": true,
       "watch": false,
       "time": true,
       "env": {
-        "NODE_ENV": "production"
+        "NODE_ENV": "production",
+        "PORT": 9999
       }
     }
   ]
